--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,6 +5,11 @@
   flex-direction: column;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -445,7 +450,7 @@ nav > ul {
   width: 100%;
 }
 
-nav > ul > li {
+nav > ul > li a{
   text-align: center;
   width: 100%;
   display: inline-block;
