feat: update badge color

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -17,41 +17,6 @@ a {
   /* width: 100%; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 input[type="radio"]:after {
   width: 15px;
   height: 15px;
@@ -279,20 +244,6 @@ input[type="text"] {
   margin-right: 0.3em;
 }
 
-.leader-badge {
-  position: relative;
-  right: -1em;
-  top: -1em;
-  background: #fee715ff;
-  border-radius: 3em;
-  color: black;
-  border: solid 1px gray;
-  width: fit-content;
-  /* align-self: flex-end; */
-  padding: 0.3em;
-  /* margin-bottom: -1em; */
-}
-
 .note {
   position: relative;
   border-radius: 5px;
@@ -308,7 +259,7 @@ input[type="text"] {
   height: 0;
   border-right: 3em solid transparent;
   border-bottom: 3em solid transparent;
-  border-top: 3em solid #fee715ff;
+  border-top: 3em solid #d1d3d1;
   z-index: 0;
 }
 
@@ -371,7 +322,7 @@ h4 {
 
 .view-poll-button {
   background-color: white;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   border: solid 0.5px gray;
   font-size: 1em;
   border-radius: 0.5em;
