--- a/src/components/App.css
+++ b/src/components/App.css
@@ -303,7 +303,7 @@ select[name="users"] {
 .login-panel {
   width: 80%;
   border: solid 1px gray;
-  margin: 1em;
+  margin: 3em;
   border-radius: 1em;
   text-align: center;
 }
@@ -382,6 +382,7 @@ h4 {
 
 .active {
   background-color: #fee715ff;
+  font-weight: 900;
 }
 
 nav {
@@ -444,4 +445,15 @@ nav button:hover {
 
 nav .nav-active {
   color: black;
+}
+
+.not-found {
+  font-family: "Alegreya", serif;
+  font-size: 3em;
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  background-color: #fee715ff;
+  border-radius: 70% 30% 30% 70% / 60% 40% 60% 40%;
 }
