--- a/src/components/App.css
+++ b/src/components/App.css
@@ -103,6 +103,12 @@ input[type="submit"]:hover {
   cursor: pointer;
 }
 
+input[type="submit"]:disabled {
+  border: 0.5px solid rgb(199, 199, 199);
+  background-color: white;
+  color: grey;
+}
+
 .avatar {
   display: flex;
   justify-content: center;
@@ -308,15 +314,19 @@ select[name="users"] {
   text-align: center;
 }
 
-.login-panel > h3,
-h4 {
+.login-panel > h3 {
   font-family: "Alegreya", serif;
+}
+
+.login-panel h4 {
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .login-panel > form {
   display: flex;
   flex-direction: column;
-  margin: 0.5em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
 .view-poll-button {
@@ -456,4 +466,42 @@ nav .nav-active {
   left: 40%;
   background-color: #fee715ff;
   border-radius: 70% 30% 30% 70% / 60% 40% 60% 40%;
+}
+
+.sign-up-button {
+  border-bottom: none;
+  border-radius: 0.8em;
+  background-color: #d1d3d1;
+  margin-bottom: 0.5em;
+  width: 90%;
+  font-size: 1em;
+  padding: 0.5em;
+}
+
+.sign-up-button:hover {
+  background-color: #fee715ff;
+  cursor: pointer;
+}
+
+.signup-form {
+  margin: 1em;
+  border-radius: 3em;
+  border: 0.5px solid #d1d3d1;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+}
+
+.signup-form > input[type="text"] {
+  border: solid 0.5px #d1d3d1;
+}
+
+.signup-form input[type="submit"] {
+  font-size: 1.2em;
+}
+
+.loading-sign {
+  position: absolute;
+  top: 50%;
 }
