--- a/src/components/App.css
+++ b/src/components/App.css
@@ -308,10 +308,11 @@ select[name="users"] {
 
 .login-panel {
   width: 80%;
-  border: solid 1px gray;
+  border: solid 1px #d1d3d1;
   margin: 3em;
   border-radius: 1em;
   text-align: center;
+  border-radius: 2em;
 }
 
 .login-panel > h3 {
@@ -489,7 +490,7 @@ nav .nav-active {
   border: 0.5px solid #d1d3d1;
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 30%;
 }
 
@@ -499,6 +500,7 @@ nav .nav-active {
 
 .signup-form input[type="submit"] {
   font-size: 1.2em;
+  margin-right: 1em;
 }
 
 .loading-sign {
@@ -507,6 +509,7 @@ nav .nav-active {
 }
 
 .empty-section {
+  font-family: "Source Sans Pro", sans-serif;
   margin: 1em;
   text-align: center;
   font-size: 2.5em;
